k8s-hl/mett-dataportal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-dataportal-app
  namespace: mett-dataportal-hl-prod
  labels:
    app: mett-dataportal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-dataportal
  template:
    metadata:
      labels:
        app: mett-dataportal
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      volumes:
        - name: mett-dataportal-app-storage
          persistentVolumeClaim:
            claimName: mett-dataportal-volume-claim
      containers:
        - image: quay.io/microbiome-informatics/mett-dataportal-data-portal:ebi-k8s-hl
          imagePullPolicy: Always
          name: mett-dataportal-data-portal
          ports:
            - containerPort: 8000
              name: gunicorn
          volumeMounts:
            - mountPath: "/app/data"
              name: mett-dataportal-app-storage
      imagePullSecrets:
        - name: quay-pull-secret
