k8s-hl/mett-dataportal-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-dataportal-api
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-dataportal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-dataportal-api
  template:
    metadata:
      labels:
        app: mett-dataportal-api
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      containers:
        - image: quay.io/microbiome-informatics/mett-dataportal-api:0.0.5
          imagePullPolicy: Always
          name: mett-dataportal-api
          ports:
            - containerPort: 8000
              name: gunicorn
      imagePullSecrets:
        - name: quay-pull-secret

---

apiVersion: v1
kind: Service
metadata:
  name: mett-dataportal-api
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-dataportal-api
spec:
  type: NodePort
  selector:
    app: mett-dataportal-api
  ports:
    - port: 8000
      targetPort: 8000
