k8s-hl/mett-dataportal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mett-dataportal
  namespace: mett-dataportal-hl-prod
  labels:
    app: mett-dataportal
spec:
  type: NodePort
  selector:
    app: mett-dataportal
  ports:
    - port: 8000
      targetPort: 8000
