k8s-hl/mett-dataportal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mett-dataportal-ingress
  namespace: mett-dataportal-hl-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: www.mett-dataportal.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mett-dataportal
                port:
                  number: 8000
